--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
                                         </button>
                                         <div class="collapse" id="licencias-collapse">
                                             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                                                <li><a href="#" class="link-dark rounded">@Traducciones["ProductosDeSoftware"].Texto</a></li>
+                                                <li>@Html.ActionLink(Traducciones["ProductosDeSoftware"].Texto, "Index", "ProductoSoftware", null, new { @class = "link-dark rounded", @id = "ProdSoft" })</li>
                                                 <li><a href="#" class="link-dark rounded">@Traducciones["ContratosDeLicencia"].Texto</a></li>
                                                 <li><a href="#" class="link-dark rounded">@Traducciones["AsignacionDeLicencias"].Texto</a></li>
 
