--- a/UI/Views/ProductoSoftware/Index.cshtml
+++ b/UI/Views/ProductoSoftware/Index.cshtml
@@ -22,7 +22,7 @@
                         </span>
                     </div>
                 }
-                <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "Marca", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
+                <a>@Html.ActionLink(@Traducciones["Nuevo"].Texto, "Create", "ProductoSoftware", null, new { @class = "btn btn-sm btn-outline-secondary", @type = "button" })</a>
                 <button type="button" class="btn btn-sm btn-outline-secondary">@Traducciones["Exportar"].Texto</button>
             </div>
 
@@ -33,14 +33,14 @@
         @if (ViewBag.CreadoOk != null)
         {
             <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>@Traducciones["Correcto"].Texto:</strong> @Traducciones["MarcaCreada"].Texto
+                <strong>@Traducciones["Correcto"].Texto:</strong> @Traducciones["SoftwareCreado"].Texto
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
         }
         @if (ViewBag.EditadoOk != null)
         {
             <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>Correcto:</strong> @Traducciones["MarcaEditada"].Texto
+                <strong>Correcto:</strong> @Traducciones["SoftwareEditado"].Texto
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
         }
@@ -87,9 +87,9 @@
                     </td>
 
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        <a href="@Url.Action("Details", "ProductoSoftware", new {id=item.Id })"><i class="fa fa-eye"></i></a>&ensp;&ensp;
+                        <a href="@Url.Action("Edit", "ProductoSoftware", new {id=item.Id })"><i class="fa fa-edit"></i></a>&ensp;&ensp;
+                        <a href="#" onclick="Confirmar('@item.Id','@item.Descripcion')"><i class="fa fa-trash"></i></a>
                     </td>
                 </tr>
             }
@@ -118,7 +118,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    @Traducciones["ConfirmarEliminarMarca"].Texto <b id="nombre_soft"></b> ?
+                    @Traducciones["ConfirmarEliminarSoftware"].Texto <b id="nombre_soft"></b> ?
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"> @Traducciones["Cancelar"].Texto</button>
@@ -152,7 +152,8 @@
 
     var Eliminar = function () {
 
-        var Id = $('#IdMarca').val();
+        var Id = $('#IdSoft').val();
+
 
         $.ajax({
 
