--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -116,7 +116,7 @@
                                                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                                                     <li><a href="#" class="link-dark rounded">@Traducciones["Configurar"].Texto</a></li>
                                                     <li><a href="#" class="link-dark rounded">@Traducciones["Colaboradores"].Texto</a></li>
-                                                    <li><a href="#" class="link-dark rounded">@Traducciones["Departamentos"].Texto</a></li>
+                                                    <li>@Html.ActionLink(Traducciones["Departamentos"].Texto, "Index", "Departamento", null, new { @class = "link-dark rounded", @id = "Departamento" })</li>
                                                 </ul>
                                             </div>
                                         </li>
