--- a/UI/Views/Activo/Edit.cshtml
+++ b/UI/Views/Activo/Edit.cshtml
@@ -168,3 +168,11 @@
     </div>
 </main>
 
+
+<script>
+
+    window.onload = function () {
+        document.getElementById('activos-collapse').className = 'show';
+        document.getElementById('Activos').className = 'btn-activo';
+    };
+</script>
