--- a/UI/Views/Licencia/Create.cshtml
+++ b/UI/Views/Licencia/Create.cshtml
@@ -95,6 +95,12 @@
         </div>
         
     </main>
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+
+
+        <script>
+
+    window.onload = function () {
+        document.getElementById('licencias-collapse').className = 'show';
+        document.getElementById('Licencias').className = 'btn-activo';
+    };
+        </script>
