--- a/UI/Views/Licencia/Edit.cshtml
+++ b/UI/Views/Licencia/Edit.cshtml
@@ -107,6 +107,6 @@
 
     window.onload = function () {
         document.getElementById('licencias-collapse').className = 'show';
-        document.getElementById('Licenicas').className = 'btn-activo';
+        document.getElementById('Licencias').className = 'btn-activo';
     };
 </script>
