--- a/UI/Views/Licencia/Index.cshtml
+++ b/UI/Views/Licencia/Index.cshtml
@@ -33,7 +33,7 @@
         @if (ViewBag.CreadoOk != null)
         {
             <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>@Traducciones["Correcto"].Texto:</strong> @Traducciones["LicenicaCreada"].Texto
+                <strong>@Traducciones["Correcto"].Texto:</strong> @Traducciones["LicenciaCreada"].Texto
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
         }
@@ -143,7 +143,7 @@
 
     window.onload = function () {
         document.getElementById('licencias-collapse').className = 'show';
-        document.getElementById('Licenicas').className = 'btn-activo';
+        document.getElementById('Licencias').className = 'btn-activo';
     };
 </script>
 
