--- a/UI/Views/ProductoSoftware/Edit.cshtml
+++ b/UI/Views/ProductoSoftware/Edit.cshtml
@@ -60,3 +60,11 @@
         }
 
 </div></main>
+
+<script>
+
+    window.onload = function () {
+        document.getElementById('licencias-collapse').className = 'show';
+        document.getElementById('ProdSoft').className = 'btn-activo';
+    };
+</script>
