Ajustes Finales 2da Entrega

--- a/UI/Views/Activo/Index.cshtml
+++ b/UI/Views/Activo/Index.cshtml
@@ -71,7 +71,7 @@
                     </th>
 
                     <th>
-                        @Traducciones["CicloDeVida"].Texto
+                        @Traducciones["FinCicloVida"].Texto
                     </th>
                     <th></th>
                 </tr>
@@ -98,7 +98,7 @@
                         @Html.DisplayFor(modelItem => item.FechaCompra)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.CicloDeVida)
+                        @Html.DisplayFor(modelItem => item.FinCicloDeVida)
                     </td>
                     <td>
 
