--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
                                     <div class="collapse" id="activos-collapse">
                                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
 
-                                            <li>@Html.ActionLink(Traducciones["Activos"].Texto, "Index", "Activo", null, new { @class = "link-dark rounded", @id = "Activos" })</li>
+                                            <li>@Html.ActionLink(Traducciones["Dispositivos"].Texto, "Index", "Activo", null, new { @class = "link-dark rounded", @id = "Activos" })</li>
                                             <li>@Html.ActionLink(Traducciones["Marcas"].Texto, "Index", "Marca", null, new { @class = "link-dark rounded", @id = "Marcas" })</li>                                          
                                             <li><a href="#" class="link-dark rounded">@Traducciones["PerfilesDeHardware"].Texto</a></li>
                                             <li><a href="#" class="link-dark rounded">@Traducciones["AsignacionDeActivos"].Texto</a></li>
