--- a/UI/Views/Activo/Create.cshtml
+++ b/UI/Views/Activo/Create.cshtml
@@ -26,62 +26,71 @@
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="row gy-2 gx-3 align-items-center">
+    <div class="row gy-2 gx-3 align-items-center">
 
 
-            <div class=" col-auto">
+        <div class=" col-auto">
 
-                <div class=" input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Nombre"].Texto</span>
-                    @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-                    @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-
-
-                </div>
-            </div>
-
-            <div class="col-auto">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Marca"].Texto</span>
-                    @Html.DropDownListFor(model => model.Marca.Id, new SelectList((System.Collections.IEnumerable)ViewData["Marcas"], "Id", "Descripcion"), new { @class = "form-control" })
-                </div>
-            </div>
-
-            <div class="col-auto ">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Modelo"].Texto</span>
-                    @Html.EditorFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            <div class=" input-group col-md-10">
+                <span class="input-group-text"> @Traducciones["Nombre"].Texto</span>
+                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
 
 
-            <div class="col-auto ">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["FechaCompra"].Texto</span>
-                    @Html.EditorFor(model => model.FechaCompra, new { htmlAttributes = new { @class = "form-control datepicker", @autocomplete = "off" } })
-                    @Html.ValidationMessageFor(model => model.FechaCompra, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="col-auto ">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["Tipo"].Texto</span>
-                    @Html.DropDownListFor(model => model.Tipo.Id, new SelectList((System.Collections.IEnumerable)ViewData["Tipos"], "Id", "Descripcion"), new { @class = "form-control" })
-
-                </div>
-            </div>
-
-
-            <div class="col-auto ">
-                <div class="input-group col-md-10">
-                    <span class="input-group-text"> @Traducciones["CicloDeVida"].Texto</span>
-                    @Html.EditorFor(model => model.CicloDeVida, new { htmlAttributes = new { @class = "form-control",@Value="1" } })
-                <span class="input-group-text"> @Traducciones["Años"].Texto</span>
-                    @Html.ValidationMessageFor(model => model.CicloDeVida, "", new { @class = "text-danger" })
-                </div>
             </div>
         </div>
+
+        <div class="col-auto">
+            <div class="input-group col-md-10">
+                <span class="input-group-text"> @Traducciones["Marca"].Texto</span>
+                @Html.DropDownListFor(model => model.Marca.Id, new SelectList((System.Collections.IEnumerable)ViewData["Marcas"], "Id", "Descripcion"), new { @class = "form-control" })
+            </div>
+        </div>
+
+        <div class="col-auto ">
+            <div class="input-group col-md-10">
+                <span class="input-group-text"> @Traducciones["Modelo"].Texto</span>
+                @Html.EditorFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+
+        <div class="col-auto ">
+            <div class="input-group col-md-10">
+                <span class="input-group-text"> @Traducciones["FechaCompra"].Texto</span>
+                @Html.EditorFor(model => model.FechaCompra, new { htmlAttributes = new { @class = "form-control datepicker", @autocomplete = "off" } })
+                @Html.ValidationMessageFor(model => model.FechaCompra, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="col-auto ">
+            <div class="input-group col-md-10">
+                <span class="input-group-text"> @Traducciones["Tipo"].Texto</span>
+                @Html.DropDownListFor(model => model.Tipo.Id, new SelectList((System.Collections.IEnumerable)ViewData["Tipos"], "Id", "Descripcion"), new { @class = "form-control" })
+
+            </div>
+        </div>
+
+
+        <div class="col-auto ">
+            <div class="input-group col-md-10">
+                <span class="input-group-text"> @Traducciones["CicloDeVida"].Texto</span>
+                @Html.EditorFor(model => model.CicloDeVida, new { htmlAttributes = new { @class = "form-control", @Value = "1" } })
+                <span class="input-group-text"> @Traducciones["Años"].Texto</span>
+                @Html.ValidationMessageFor(model => model.CicloDeVida, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="col-auto ">
+            <div class="input-group col-md-10">
+                <span class="input-group-text"> @Traducciones["NumeroSerie"].Texto</span>
+                @Html.EditorFor(model => model.NumeroSerie, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NumeroSerie, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+    </div>
         <br />
         // Componentes de PC
         <div class="row gy-2 gx-3 align-items-center" id="cmp-pc">
