--- a/UI/Views/Activo/Edit.cshtml
+++ b/UI/Views/Activo/Edit.cshtml
@@ -21,71 +21,79 @@
         {
             @Html.AntiForgeryToken()
 
-            <div class="row gy-2 gx-3 align-items-center">
+        <div class="row gy-2 gx-3 align-items-center">
 
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.Id)
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
 
-                <div class=" col-auto">
-                    <div class=" input-group col-md-10">
-                        <span class="input-group-text">Id</span>
-                        @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
-                        @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-                    </div>
+            <div class=" col-auto">
+                <div class=" input-group col-md-10">
+                    <span class="input-group-text">Id</span>
+                    @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                    @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
                 </div>
+            </div>
 
-                <div class=" col-auto">
-                    <div class=" input-group col-md-10">
-                        <span class="input-group-text">@Traducciones["Nombre"].Texto</span>
-                        @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-                    </div>
+            <div class=" col-auto">
+                <div class=" input-group col-md-10">
+                    <span class="input-group-text">@Traducciones["Nombre"].Texto</span>
+                    @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                 </div>
+            </div>
 
-                <div class="col-auto">
-                    <div class="input-group col-md-10">
-                        <span class="input-group-text">@Traducciones["Marca"].Texto</span>
-                        @Html.DropDownListFor(model => model.Marca.Id, new SelectList((System.Collections.IEnumerable)ViewData["Marcas"], "Id", "Descripcion", @Html.DisplayFor(model => model.Marca.Id)), new { @class = "form-control" })
-                    </div>
+            <div class="col-auto">
+                <div class="input-group col-md-10">
+                    <span class="input-group-text">@Traducciones["Marca"].Texto</span>
+                    @Html.DropDownListFor(model => model.Marca.Id, new SelectList((System.Collections.IEnumerable)ViewData["Marcas"], "Id", "Descripcion", @Html.DisplayFor(model => model.Marca.Id)), new { @class = "form-control" })
                 </div>
+            </div>
 
-                <div class="col-auto">
-                    <div class="input-group col-md-10">
-                        <span class="input-group-text">@Traducciones["Modelo"].Texto</span>
-                        @Html.EditorFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
-                    </div>
+            <div class="col-auto">
+                <div class="input-group col-md-10">
+                    <span class="input-group-text">@Traducciones["Modelo"].Texto</span>
+                    @Html.EditorFor(model => model.Modelo, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Modelo, "", new { @class = "text-danger" })
                 </div>
+            </div>
 
-                <div class="col-auto">
-                    <div class="input-group col-md-10">
-                        <span class="input-group-text">@Traducciones["Tipo"].Texto</span>
-                        @Html.HiddenFor(model => model.Tipo.ArquitecturaPc)
-                        @Html.DropDownListFor(model => model.Tipo.Id, new SelectList((System.Collections.IEnumerable)ViewData["Tipos"], "Id", "Descripcion", @Html.DisplayFor(model => model.Tipo.Id)), new { @class = "form-control", disabled="disabled" })
+            <div class="col-auto">
+                <div class="input-group col-md-10">
+                    <span class="input-group-text">@Traducciones["Tipo"].Texto</span>
+                    @Html.HiddenFor(model => model.Tipo.ArquitecturaPc)
+                    @Html.DropDownListFor(model => model.Tipo.Id, new SelectList((System.Collections.IEnumerable)ViewData["Tipos"], "Id", "Descripcion", @Html.DisplayFor(model => model.Tipo.Id)), new { @class = "form-control", disabled = "disabled" })
 
-                    </div>
                 </div>
+            </div>
 
-                <div class=" col-auto">
-                    <div class=" input-group col-md-10">
-                        <span class="input-group-text">@Traducciones["FechaCompra"].Texto</span>
-                        @Html.EditorFor(model => model.FechaCompra, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.FechaCompra, "", new { @class = "text-danger" })
-                    </div>
+            <div class=" col-auto">
+                <div class=" input-group col-md-10">
+                    <span class="input-group-text">@Traducciones["FechaCompra"].Texto</span>
+                    @Html.EditorFor(model => model.FechaCompra, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FechaCompra, "", new { @class = "text-danger" })
                 </div>
+            </div>
 
-                <div class=" col-auto">
-                    <div class=" input-group col-md-10">
-                        <span class="input-group-text">@Traducciones["CicloDeVida"].Texto</span>
+            <div class=" col-auto">
+                <div class=" input-group col-md-10">
+                    <span class="input-group-text">@Traducciones["CicloDeVida"].Texto</span>
 
-                        @Html.EditorFor(model => model.CicloDeVida, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.CicloDeVida, new { htmlAttributes = new { @class = "form-control" } })
                     <span class="input-group-text">@Traducciones["Años"].Texto</span>
-                        @Html.ValidationMessageFor(model => model.CicloDeVida, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.CicloDeVida, "", new { @class = "text-danger" })
 
-                    </div>
                 </div>
-            </div><br />                
+            </div>
+            <div class=" col-auto">
+                <div class=" input-group col-md-10">
+                    <span class="input-group-text">@Traducciones["NumeroSerie"].Texto</span>
+                    @Html.EditorFor(model => model.NumeroSerie, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.NumeroSerie, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+        </div><br />                
            // Componentes de PC
            if(Model.Tipo.ArquitecturaPc==true)
             { 
