--- a/UI/Views/Activo/Create.cshtml
+++ b/UI/Views/Activo/Create.cshtml
@@ -196,7 +196,7 @@
     <script>
         $("#Tipo_Id").change(function () {
 
-            if ($('#Tipo_Id').val() == "1" || $('#Tipo_Id').val() == "2" ) {
+            if ($('#Tipo_Id').val() == "1" || $('#Tipo_Id').val() == "2" || $('#Tipo_Id').val() == "5" || $('#Tipo_Id').val() == "6"  ) {
                 $('#cmp-pc').show("slow");
    
             }
