--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -80,8 +80,9 @@
                                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
 
                                             <li>@Html.ActionLink(Traducciones["Dispositivos"].Texto, "Index", "Activo", null, new { @class = "link-dark rounded", @id = "Activos" })</li>
-                                            <li>@Html.ActionLink(Traducciones["Marcas"].Texto, "Index", "Marca", null, new { @class = "link-dark rounded", @id = "Marcas" })</li>                                          
-                                            <li><a href="#" class="link-dark rounded">@Traducciones["PerfilesDeHardware"].Texto</a></li>
+                                            <li>@Html.ActionLink(Traducciones["Marcas"].Texto, "Index", "Marca", null, new { @class = "link-dark rounded", @id = "Marcas" })</li>
+                                            <li>@Html.ActionLink(Traducciones["PerfilesDeHardware"].Texto, "Index", "PerfilHardware", null, new { @class = "link-dark rounded", @id = "PerfilHardware" })</li>
+
                                             <li><a href="#" class="link-dark rounded">@Traducciones["AsignacionDeActivos"].Texto</a></li>
                                         </ul>
                                     </div>
